--- a/src/theme/adapt-contrib-vanilla/less/client.less
+++ b/src/theme/adapt-contrib-vanilla/less/client.less
@@ -87,7 +87,7 @@ html, body {
 // small side graphics!
 .c-01_01_060, .c-02_01_040, .c-03_01_020, .c-03_01_080, .c-03_01_130, 
 .c-04_01_030, .c-04_01_060-t, .c-04_01_100, .c-04_01_140, .c-04_01_170, .c-05_01_070, .c-05_01_090,
-.c-06_00_030, .c-06_03_010, .c-07_01_060,
+.c-06_00_030, .c-06_03_010, .c-07_01_010-t, .c-07_01_060,
 .c-03_01_120-t, .c-06_03_080-t, .c-06_04_060-t {  //, .c-06_01_010-t
     width: 70%!important;
     @media (max-width: @device-width-medium) {
@@ -101,7 +101,7 @@ html, body {
 
 .c-01_01_060-g, .c-02_01_040-g, .c-03_01_020-g, .c-03_01_080-g, .c-03_01_130-g, 
 .c-04_01_030-g, .c-04_01_060-g, .c-04_01_100-g, .c-04_01_140-g, .c-04_01_170-g, .c-05_01_070-g, .c-05_01_090-g,
-.c-06_00_030-g, .c-06_03_010-g, .c-07_01_060-g,
+.c-06_00_030-g, .c-06_03_010-g, .c-07_01_010-g, .c-07_01_060-g,
 .c-03_01_120-g, .c-06_03_080-g, .c-06_04_060-g { //, .c-06_01_010-g
     width: 30%!important;
     @media (max-width: @device-width-medium) {
@@ -527,6 +527,9 @@ a {
     font-weight: @font-weight-bold;
     text-align: center;
     // color: @bike-dark-green;
+    &.left {
+        text-align: left;
+    }
 }
 
 .quote-ann {
