further client amends && updated videos

--- a/src/components/walkgrove_adapt_interactiveVideo/less/interactiveVideo.less
+++ b/src/components/walkgrove_adapt_interactiveVideo/less/interactiveVideo.less
@@ -209,8 +209,8 @@
     .component {
         opacity: 1;
 
-        animation-name: fadeIn;
-        animation-duration: 1s;
+        // animation-name: fadeIn;
+        // animation-duration: 1s;
 
         //padding: 1rem;
     }
