--- a/src/theme/adapt-contrib-vanilla/less/client.less
+++ b/src/theme/adapt-contrib-vanilla/less/client.less
@@ -194,7 +194,7 @@ html, body {
 
 .hotgraphic__pin.has-pin-image {
     background: transparent;
-    max-width: 15%;
+    max-width: 18%;
 
     .hotgraphic__pin-image-container {
         position: relative;
@@ -1297,6 +1297,16 @@ a {
             width: 100%;
             min-width: 100%;
         }
+    }
+}
+
+.c-01_01_050 {
+    .timeline__widget {
+        border: none!important;
+        margin: 0.5rem 0!important;
+    }
+    .timeline__item-title, .timeline__widget:after, .timeline__items.is-more:after {
+        display: none;
     }
 }
 
