--- a/src/theme/adapt-contrib-vanilla/less/_defaults/_colors.less
+++ b/src/theme/adapt-contrib-vanilla/less/_defaults/_colors.less
@@ -25,6 +25,8 @@
 @bike-orange-light: #fce6c2;
 @bike-red-light: #fccecd;
 
+@bike-pink: #FFCECD;
+
 @dragdrop-1: @bike-blue-light;
 @dragdrop-2: @bike-green-light;
 @dragdrop-3: @bike-orange-light;
