--- a/src/theme/adapt-contrib-vanilla/less/client.less
+++ b/src/theme/adapt-contrib-vanilla/less/client.less
@@ -1319,7 +1319,7 @@ a {
     }
 }
 
-.c-01_01_050 {
+.c-01_01_050, .c-06_03_020 {
     .timeline__widget {
         border: none!important;
         margin: 0.5rem 0!important;
