client amends, remove screen refs

--- a/src/theme/adapt-contrib-vanilla/less/client.less
+++ b/src/theme/adapt-contrib-vanilla/less/client.less
@@ -434,6 +434,13 @@ a {
     font-weight: normal;
 }
 
+.box-orange {
+    border: 2px solid @bike-orange;
+    padding: 1rem;
+    background-color: @bike-orange-light;
+    font-weight: normal;
+}
+
 .box-orange-text {
     display: flex;
     align-items: center;
